import work stuff without files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head><title>Rens W. van der Heijden</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head>
 <body>
 <p>
-Hello. Welcome to my static little homepage. This page is split into a <a href="/personal">personal</a> and a <a href="/work">work</a> page. There was a <a href="/blog">blog</a>, too, but it's dead for now.
+Hello. Welcome to my static little homepage. This page is split into a <s><a href="./personal">personal</a></s> (currently offline, because most of this is more than 6 years old) and a <a href="./work/index.html">work</a> page.
+This page is hosted on github through github pages. In the unlikely event that you're interested in seeing the sources, <a href="https://github.com/namnatulco/namnatulco.eu">click here</a>.
 </p>
 </body>
 </html>
