--- a/work/CV.html
+++ b/work/CV.html
@@ -12,12 +12,12 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="../bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../theme.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
 
   </head>
   <body role="document">
