--- a/work/work.html
+++ b/work/work.html
@@ -17,7 +17,7 @@
     <link href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
 
   </head>
