--- a/aktionen/pages/announce.html
+++ b/aktionen/pages/announce.html
@@ -7,6 +7,8 @@ categories: [info]
 
 Diese Kategorie enthält anstehende Veranstaltungen. 
 
+	  <h3> Achtung! Vorläufige Informationen die nicht von den Anmeldenden gepflegt werden! Bitte unten nachschauen! </h3>
+
 {% for item in site.announce %}
 
 <div id="{{item.url}}" event-date="{{item.event-date | date: '%Y%m%d'}}">
