verweis auf unterseiten

--- a/aktionen/pages/announce.html
+++ b/aktionen/pages/announce.html
@@ -48,6 +48,7 @@ addEventListener('load', (event) => {showNew();});
 </script>
 
 Diese Seite gibt eine Übersicht zu anstehenden Veranstaltungen in Nürnberg.
+Sharepics/Poster gibt es, soweit verfügbar, auf den Unterseiten (denn sonst wäre diese Seite irgendwann sehr langsam...).
 
 	  <h3> Achtung! Vorläufige Informationen die nicht von den Anmeldenden gepflegt werden! Bitte bei den jeweiligen Quellen nachschauen! </h3>
 
